CHALLENGE 1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpha-svc
  namespace: alpha
spec:
  type: ClusterIP
  selector:
    app: alpha-xyz
  ports:
    - port: 80
      targetPort: 80
